qt6/gen_qgridlayout.h

typedef struct QGridLayout QGridLayout;
typedef struct QLayout QLayout;
typedef struct QLayoutItem QLayoutItem;
typedef struct QMetaObject QMetaObject;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QWidget QWidget;
QGridLayout* QGridLayout_new(QWidget* parent);
QGridLayout* QGridLayout_new2();
QMetaObject* QGridLayout_metaObject(const QGridLayout* self);
void* QGridLayout_metacast(QGridLayout* self, const char* param1);
int QGridLayout_metacall(QGridLayout* self, int param1, int param2, void** param3);
struct miqt_string QGridLayout_tr(const char* s);
QSize* QGridLayout_sizeHint(const QGridLayout* self);
QSize* QGridLayout_minimumSize(const QGridLayout* self);
QSize* QGridLayout_maximumSize(const QGridLayout* self);
void QGridLayout_setHorizontalSpacing(QGridLayout* self, int spacing);
int QGridLayout_horizontalSpacing(const QGridLayout* self);
void QGridLayout_setVerticalSpacing(QGridLayout* self, int spacing);
int QGridLayout_verticalSpacing(const QGridLayout* self);
void QGridLayout_setSpacing(QGridLayout* self, int spacing);
int QGridLayout_spacing(const QGridLayout* self);
void QGridLayout_setRowStretch(QGridLayout* self, int row, int stretch);
void QGridLayout_setColumnStretch(QGridLayout* self, int column, int stretch);
int QGridLayout_rowStretch(const QGridLayout* self, int row);
int QGridLayout_columnStretch(const QGridLayout* self, int column);
void QGridLayout_setRowMinimumHeight(QGridLayout* self, int row, int minSize);
void QGridLayout_setColumnMinimumWidth(QGridLayout* self, int column, int minSize);
int QGridLayout_rowMinimumHeight(const QGridLayout* self, int row);
int QGridLayout_columnMinimumWidth(const QGridLayout* self, int column);
int QGridLayout_columnCount(const QGridLayout* self);
int QGridLayout_rowCount(const QGridLayout* self);
QRect* QGridLayout_cellRect(const QGridLayout* self, int row, int column);
bool QGridLayout_hasHeightForWidth(const QGridLayout* self);
int QGridLayout_heightForWidth(const QGridLayout* self, int param1);
int QGridLayout_minimumHeightForWidth(const QGridLayout* self, int param1);
int QGridLayout_expandingDirections(const QGridLayout* self);
void QGridLayout_invalidate(QGridLayout* self);
void QGridLayout_addWidget(QGridLayout* self, QWidget* w);
void QGridLayout_addWidget2(QGridLayout* self, QWidget* param1, int row, int column);
void QGridLayout_addWidget3(QGridLayout* self, QWidget* param1, int row, int column, int rowSpan, int columnSpan);
void QGridLayout_addLayout(QGridLayout* self, QLayout* param1, int row, int column);
void QGridLayout_addLayout2(QGridLayout* self, QLayout* param1, int row, int column, int rowSpan, int columnSpan);
void QGridLayout_setOriginCorner(QGridLayout* self, int originCorner);
int QGridLayout_originCorner(const QGridLayout* self);
QLayoutItem* QGridLayout_itemAt(const QGridLayout* self, int index);
QLayoutItem* QGridLayout_itemAtPosition(const QGridLayout* self, int row, int column);
QLayoutItem* QGridLayout_takeAt(QGridLayout* self, int index);
int QGridLayout_count(const QGridLayout* self);
void QGridLayout_setGeometry(QGridLayout* self, QRect* geometry);
void QGridLayout_addItem(QGridLayout* self, QLayoutItem* item, int row, int column);
void QGridLayout_setDefaultPositioning(QGridLayout* self, int n, int orient);
void QGridLayout_getItemPosition(const QGridLayout* self, int idx, int* row, int* column, int* rowSpan, int* columnSpan);
struct miqt_string QGridLayout_tr2(const char* s, const char* c);
struct miqt_string QGridLayout_tr3(const char* s, const char* c, int n);
void QGridLayout_addWidget4(QGridLayout* self, QWidget* param1, int row, int column, int param4);
void QGridLayout_addWidget6(QGridLayout* self, QWidget* param1, int row, int column, int rowSpan, int columnSpan, int param6);
void QGridLayout_addLayout4(QGridLayout* self, QLayout* param1, int row, int column, int param4);
void QGridLayout_addLayout6(QGridLayout* self, QLayout* param1, int row, int column, int rowSpan, int columnSpan, int param6);
void QGridLayout_addItem4(QGridLayout* self, QLayoutItem* item, int row, int column, int rowSpan);
void QGridLayout_addItem5(QGridLayout* self, QLayoutItem* item, int row, int column, int rowSpan, int columnSpan);
void QGridLayout_addItem6(QGridLayout* self, QLayoutItem* item, int row, int column, int rowSpan, int columnSpan, int param6);
bool QGridLayout_override_virtual_metacall(void* self, intptr_t slot);
int QGridLayout_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QGridLayout_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QGridLayout_virtualbase_sizeHint(const void* self);
bool QGridLayout_override_virtual_minimumSize(void* self, intptr_t slot);
QSize* QGridLayout_virtualbase_minimumSize(const void* self);
bool QGridLayout_override_virtual_maximumSize(void* self, intptr_t slot);
QSize* QGridLayout_virtualbase_maximumSize(const void* self);
bool QGridLayout_override_virtual_setSpacing(void* self, intptr_t slot);
void QGridLayout_virtualbase_setSpacing(void* self, int spacing);
bool QGridLayout_override_virtual_spacing(void* self, intptr_t slot);
int QGridLayout_virtualbase_spacing(const void* self);
bool QGridLayout_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QGridLayout_virtualbase_hasHeightForWidth(const void* self);
bool QGridLayout_override_virtual_heightForWidth(void* self, intptr_t slot);
int QGridLayout_virtualbase_heightForWidth(const void* self, int param1);
bool QGridLayout_override_virtual_minimumHeightForWidth(void* self, intptr_t slot);
int QGridLayout_virtualbase_minimumHeightForWidth(const void* self, int param1);
bool QGridLayout_override_virtual_expandingDirections(void* self, intptr_t slot);
int QGridLayout_virtualbase_expandingDirections(const void* self);
bool QGridLayout_override_virtual_invalidate(void* self, intptr_t slot);
void QGridLayout_virtualbase_invalidate(void* self);
bool QGridLayout_override_virtual_itemAt(void* self, intptr_t slot);
QLayoutItem* QGridLayout_virtualbase_itemAt(const void* self, int index);
bool QGridLayout_override_virtual_takeAt(void* self, intptr_t slot);
QLayoutItem* QGridLayout_virtualbase_takeAt(void* self, int index);
bool QGridLayout_override_virtual_count(void* self, intptr_t slot);
int QGridLayout_virtualbase_count(const void* self);
bool QGridLayout_override_virtual_setGeometry(void* self, intptr_t slot);
void QGridLayout_virtualbase_setGeometry(void* self, QRect* geometry);
bool QGridLayout_override_virtual_addItemWithQLayoutItem(void* self, intptr_t slot);
void QGridLayout_virtualbase_addItemWithQLayoutItem(void* self, QLayoutItem* param1);
bool QGridLayout_override_virtual_geometry(void* self, intptr_t slot);
QRect* QGridLayout_virtualbase_geometry(const void* self);
bool QGridLayout_override_virtual_indexOf(void* self, intptr_t slot);
int QGridLayout_virtualbase_indexOf(const void* self, QWidget* param1);
bool QGridLayout_override_virtual_isEmpty(void* self, intptr_t slot);
bool QGridLayout_virtualbase_isEmpty(const void* self);
bool QGridLayout_override_virtual_controlTypes(void* self, intptr_t slot);
int QGridLayout_virtualbase_controlTypes(const void* self);
bool QGridLayout_override_virtual_replaceWidget(void* self, intptr_t slot);
QLayoutItem* QGridLayout_virtualbase_replaceWidget(void* self, QWidget* from, QWidget* to, int options);
QLayout* QGridLayout_virtualbase_layout(void* self);