qt6/gen_qgridlayout.nim


proc fcQGridLayout_new(parent: pointer): ptr cQGridLayout {.importc: "QGridLayout_new".}
proc fcQGridLayout_new2(): ptr cQGridLayout {.importc: "QGridLayout_new2".}
proc fcQGridLayout_metaObject(self: pointer, ): pointer {.importc: "QGridLayout_metaObject".}
proc fcQGridLayout_metacast(self: pointer, param1: cstring): pointer {.importc: "QGridLayout_metacast".}
proc fcQGridLayout_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QGridLayout_metacall".}
proc fcQGridLayout_tr(s: cstring): struct_miqt_string {.importc: "QGridLayout_tr".}
proc fcQGridLayout_sizeHint(self: pointer, ): pointer {.importc: "QGridLayout_sizeHint".}
proc fcQGridLayout_minimumSize(self: pointer, ): pointer {.importc: "QGridLayout_minimumSize".}
proc fcQGridLayout_maximumSize(self: pointer, ): pointer {.importc: "QGridLayout_maximumSize".}
proc fcQGridLayout_setHorizontalSpacing(self: pointer, spacing: cint): void {.importc: "QGridLayout_setHorizontalSpacing".}
proc fcQGridLayout_horizontalSpacing(self: pointer, ): cint {.importc: "QGridLayout_horizontalSpacing".}
proc fcQGridLayout_setVerticalSpacing(self: pointer, spacing: cint): void {.importc: "QGridLayout_setVerticalSpacing".}
proc fcQGridLayout_verticalSpacing(self: pointer, ): cint {.importc: "QGridLayout_verticalSpacing".}
proc fcQGridLayout_setSpacing(self: pointer, spacing: cint): void {.importc: "QGridLayout_setSpacing".}
proc fcQGridLayout_spacing(self: pointer, ): cint {.importc: "QGridLayout_spacing".}
proc fcQGridLayout_setRowStretch(self: pointer, row: cint, stretch: cint): void {.importc: "QGridLayout_setRowStretch".}
proc fcQGridLayout_setColumnStretch(self: pointer, column: cint, stretch: cint): void {.importc: "QGridLayout_setColumnStretch".}
proc fcQGridLayout_rowStretch(self: pointer, row: cint): cint {.importc: "QGridLayout_rowStretch".}
proc fcQGridLayout_columnStretch(self: pointer, column: cint): cint {.importc: "QGridLayout_columnStretch".}
proc fcQGridLayout_setRowMinimumHeight(self: pointer, row: cint, minSize: cint): void {.importc: "QGridLayout_setRowMinimumHeight".}
proc fcQGridLayout_setColumnMinimumWidth(self: pointer, column: cint, minSize: cint): void {.importc: "QGridLayout_setColumnMinimumWidth".}
proc fcQGridLayout_rowMinimumHeight(self: pointer, row: cint): cint {.importc: "QGridLayout_rowMinimumHeight".}
proc fcQGridLayout_columnMinimumWidth(self: pointer, column: cint): cint {.importc: "QGridLayout_columnMinimumWidth".}
proc fcQGridLayout_columnCount(self: pointer, ): cint {.importc: "QGridLayout_columnCount".}
proc fcQGridLayout_rowCount(self: pointer, ): cint {.importc: "QGridLayout_rowCount".}
proc fcQGridLayout_cellRect(self: pointer, row: cint, column: cint): pointer {.importc: "QGridLayout_cellRect".}
proc fcQGridLayout_hasHeightForWidth(self: pointer, ): bool {.importc: "QGridLayout_hasHeightForWidth".}
proc fcQGridLayout_heightForWidth(self: pointer, param1: cint): cint {.importc: "QGridLayout_heightForWidth".}
proc fcQGridLayout_minimumHeightForWidth(self: pointer, param1: cint): cint {.importc: "QGridLayout_minimumHeightForWidth".}
proc fcQGridLayout_expandingDirections(self: pointer, ): cint {.importc: "QGridLayout_expandingDirections".}
proc fcQGridLayout_invalidate(self: pointer, ): void {.importc: "QGridLayout_invalidate".}
proc fcQGridLayout_addWidget(self: pointer, w: pointer): void {.importc: "QGridLayout_addWidget".}
proc fcQGridLayout_addWidget2(self: pointer, param1: pointer, row: cint, column: cint): void {.importc: "QGridLayout_addWidget2".}
proc fcQGridLayout_addWidget3(self: pointer, param1: pointer, row: cint, column: cint, rowSpan: cint, columnSpan: cint): void {.importc: "QGridLayout_addWidget3".}
proc fcQGridLayout_addLayout(self: pointer, param1: pointer, row: cint, column: cint): void {.importc: "QGridLayout_addLayout".}
proc fcQGridLayout_addLayout2(self: pointer, param1: pointer, row: cint, column: cint, rowSpan: cint, columnSpan: cint): void {.importc: "QGridLayout_addLayout2".}
proc fcQGridLayout_setOriginCorner(self: pointer, originCorner: cint): void {.importc: "QGridLayout_setOriginCorner".}
proc fcQGridLayout_originCorner(self: pointer, ): cint {.importc: "QGridLayout_originCorner".}
proc fcQGridLayout_itemAt(self: pointer, index: cint): pointer {.importc: "QGridLayout_itemAt".}
proc fcQGridLayout_itemAtPosition(self: pointer, row: cint, column: cint): pointer {.importc: "QGridLayout_itemAtPosition".}
proc fcQGridLayout_takeAt(self: pointer, index: cint): pointer {.importc: "QGridLayout_takeAt".}
proc fcQGridLayout_count(self: pointer, ): cint {.importc: "QGridLayout_count".}
proc fcQGridLayout_setGeometry(self: pointer, geometry: pointer): void {.importc: "QGridLayout_setGeometry".}
proc fcQGridLayout_addItem(self: pointer, item: pointer, row: cint, column: cint): void {.importc: "QGridLayout_addItem".}
proc fcQGridLayout_setDefaultPositioning(self: pointer, n: cint, orient: cint): void {.importc: "QGridLayout_setDefaultPositioning".}
proc fcQGridLayout_getItemPosition(self: pointer, idx: cint, row: ptr cint, column: ptr cint, rowSpan: ptr cint, columnSpan: ptr cint): void {.importc: "QGridLayout_getItemPosition".}
proc fcQGridLayout_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QGridLayout_tr2".}
proc fcQGridLayout_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGridLayout_tr3".}
proc fcQGridLayout_addWidget4(self: pointer, param1: pointer, row: cint, column: cint, param4: cint): void {.importc: "QGridLayout_addWidget4".}
proc fcQGridLayout_addWidget6(self: pointer, param1: pointer, row: cint, column: cint, rowSpan: cint, columnSpan: cint, param6: cint): void {.importc: "QGridLayout_addWidget6".}
proc fcQGridLayout_addLayout4(self: pointer, param1: pointer, row: cint, column: cint, param4: cint): void {.importc: "QGridLayout_addLayout4".}
proc fcQGridLayout_addLayout6(self: pointer, param1: pointer, row: cint, column: cint, rowSpan: cint, columnSpan: cint, param6: cint): void {.importc: "QGridLayout_addLayout6".}
proc fcQGridLayout_addItem4(self: pointer, item: pointer, row: cint, column: cint, rowSpan: cint): void {.importc: "QGridLayout_addItem4".}
proc fcQGridLayout_addItem5(self: pointer, item: pointer, row: cint, column: cint, rowSpan: cint, columnSpan: cint): void {.importc: "QGridLayout_addItem5".}
proc fcQGridLayout_addItem6(self: pointer, item: pointer, row: cint, column: cint, rowSpan: cint, columnSpan: cint, param6: cint): void {.importc: "QGridLayout_addItem6".}
proc fQGridLayout_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QGridLayout_virtualbase_metacall".}
proc fcQGridLayout_override_virtual_metacall(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_metacall".}
proc fQGridLayout_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QGridLayout_virtualbase_sizeHint".}
proc fcQGridLayout_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_sizeHint".}
proc fQGridLayout_virtualbase_minimumSize(self: pointer, ): pointer{.importc: "QGridLayout_virtualbase_minimumSize".}
proc fcQGridLayout_override_virtual_minimumSize(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_minimumSize".}
proc fQGridLayout_virtualbase_maximumSize(self: pointer, ): pointer{.importc: "QGridLayout_virtualbase_maximumSize".}
proc fcQGridLayout_override_virtual_maximumSize(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_maximumSize".}
proc fQGridLayout_virtualbase_setSpacing(self: pointer, spacing: cint): void{.importc: "QGridLayout_virtualbase_setSpacing".}
proc fcQGridLayout_override_virtual_setSpacing(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_setSpacing".}
proc fQGridLayout_virtualbase_spacing(self: pointer, ): cint{.importc: "QGridLayout_virtualbase_spacing".}
proc fcQGridLayout_override_virtual_spacing(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_spacing".}
proc fQGridLayout_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QGridLayout_virtualbase_hasHeightForWidth".}
proc fcQGridLayout_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_hasHeightForWidth".}
proc fQGridLayout_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QGridLayout_virtualbase_heightForWidth".}
proc fcQGridLayout_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_heightForWidth".}
proc fQGridLayout_virtualbase_minimumHeightForWidth(self: pointer, param1: cint): cint{.importc: "QGridLayout_virtualbase_minimumHeightForWidth".}
proc fcQGridLayout_override_virtual_minimumHeightForWidth(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_minimumHeightForWidth".}
proc fQGridLayout_virtualbase_expandingDirections(self: pointer, ): cint{.importc: "QGridLayout_virtualbase_expandingDirections".}
proc fcQGridLayout_override_virtual_expandingDirections(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_expandingDirections".}
proc fQGridLayout_virtualbase_invalidate(self: pointer, ): void{.importc: "QGridLayout_virtualbase_invalidate".}
proc fcQGridLayout_override_virtual_invalidate(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_invalidate".}
proc fQGridLayout_virtualbase_itemAt(self: pointer, index: cint): pointer{.importc: "QGridLayout_virtualbase_itemAt".}
proc fcQGridLayout_override_virtual_itemAt(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_itemAt".}
proc fQGridLayout_virtualbase_takeAt(self: pointer, index: cint): pointer{.importc: "QGridLayout_virtualbase_takeAt".}
proc fcQGridLayout_override_virtual_takeAt(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_takeAt".}
proc fQGridLayout_virtualbase_count(self: pointer, ): cint{.importc: "QGridLayout_virtualbase_count".}
proc fcQGridLayout_override_virtual_count(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_count".}
proc fQGridLayout_virtualbase_setGeometry(self: pointer, geometry: pointer): void{.importc: "QGridLayout_virtualbase_setGeometry".}
proc fcQGridLayout_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_setGeometry".}
proc fQGridLayout_virtualbase_addItemWithQLayoutItem(self: pointer, param1: pointer): void{.importc: "QGridLayout_virtualbase_addItemWithQLayoutItem".}
proc fcQGridLayout_override_virtual_addItemWithQLayoutItem(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_addItemWithQLayoutItem".}
proc fQGridLayout_virtualbase_geometry(self: pointer, ): pointer{.importc: "QGridLayout_virtualbase_geometry".}
proc fcQGridLayout_override_virtual_geometry(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_geometry".}
proc fQGridLayout_virtualbase_indexOf(self: pointer, param1: pointer): cint{.importc: "QGridLayout_virtualbase_indexOf".}
proc fcQGridLayout_override_virtual_indexOf(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_indexOf".}
proc fQGridLayout_virtualbase_isEmpty(self: pointer, ): bool{.importc: "QGridLayout_virtualbase_isEmpty".}
proc fcQGridLayout_override_virtual_isEmpty(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_isEmpty".}
proc fQGridLayout_virtualbase_controlTypes(self: pointer, ): cint{.importc: "QGridLayout_virtualbase_controlTypes".}
proc fcQGridLayout_override_virtual_controlTypes(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_controlTypes".}
proc fQGridLayout_virtualbase_replaceWidget(self: pointer, fromVal: pointer, to: pointer, options: cint): pointer{.importc: "QGridLayout_virtualbase_replaceWidget".}
proc fcQGridLayout_override_virtual_replaceWidget(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_replaceWidget".}
proc fQGridLayout_virtualbase_layout(self: pointer, ): pointer{.importc: "QGridLayout_virtualbase_layout".}
